<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MainScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/size20">

    <TextView
        style="@style/HeadText"
        android:layout_height="56dp"
        android:layout_gravity="start"
        android:text="@string/app_name"
        android:textColor="?attr/colorPrimary"
        android:textSize="@dimen/textButton" />

    <Button
        style="@style/MainButtonStyle"
        android:id="@+id/searchButton"
        android:text="@string/Search"
        android:textColor="@color/black"
        android:textSize="@dimen/textButton"
        app:icon="@drawable/search"
        app:cornerRadius="@dimen/radius"
        app:iconPadding="@dimen/gap"/>

    <Button
        style="@style/MainButtonStyle"
        android:id="@+id/musicButton"
        android:text="@string/Media"
        android:textColor="@color/black"
        android:textSize="@dimen/textButton"
        app:icon="@drawable/music"
        app:cornerRadius="@dimen/radius"
        app:iconPadding="@dimen/gap"/>

    <Button
        style="@style/MainButtonStyle"
        android:id="@+id/settingButton"
        android:text="@string/Setting"
        android:textColor="@color/black"
        android:textSize="@dimen/textButton"
        app:icon="@drawable/settings"
        app:cornerRadius="@dimen/radius"
        app:iconPadding="@dimen/gap" />


</LinearLayout>
