<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    style="@style/HeadText"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop">

        <Button
            style="@style/SettingButtonStyle"
            android:id="@+id/back"
            app:icon="@drawable/back"
            android:background="@android:color/transparent"/>

        <TextView
            style="@style/HeadText"
            android:layout_gravity="center_vertical"
            android:text="@string/Setting"
            android:textSize="@dimen/textButton"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop">

        <TextView
            style="@style/MessageTextStyle"
            android:layout_weight="0"
            android:paddingLeft="@dimen/size20"
            android:text="@string/Black"
            android:textSize="@dimen/size20" />

        <Switch
            android:id="@+id/themeSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingRight="37dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop">

        <TextView
            style="@style/MessageTextStyle"
            android:paddingLeft="@dimen/size20"
            android:text="@string/Share"
            android:textSize="@dimen/size20" />

        <Button
            android:id="@+id/buttonShare"
            style="@style/SettingButtonStyle"
            app:icon="@drawable/share"
            android:background="@android:color/transparent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop">

        <TextView
            style="@style/MessageTextStyle"
            android:paddingLeft="@dimen/size20"
            android:text="@string/Call"
            android:textSize="@dimen/size20" />

        <Button
            android:id="@+id/buttonSupport"
            style="@style/SettingButtonStyle"
            app:icon="@drawable/group"
            android:background="@android:color/transparent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop">

        <TextView
            style="@style/MessageTextStyle"
            android:paddingLeft="@dimen/size20"
            android:text="@string/User"
            android:textSize="@dimen/size20" />

        <Button
            android:id="@+id/buttonAgreement"
            style="@style/SettingButtonStyle"
            app:icon="@drawable/light_mode"
            android:background="@android:color/transparent"/>

    </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">

                <Button
                    style="@style/BottomButton"
                    android:id="@+id/button1"
                    android:text="@string/Search"
                    android:textSize="@dimen/bottomButton"
                    app:icon="@drawable/search"
                    android:background="@android:color/transparent"/>

                <Button
                    style="@style/BottomButton"
                    android:id="@+id/button2"
                    android:textSize="@dimen/bottomButton"
                    android:text="@string/Media"
                    app:icon="@drawable/music"
                    android:background="@android:color/transparent"/>

                <Button
                    style="@style/BottomButtonActivity"
                    android:id="@+id/button3"
                    android:textSize="@dimen/bottomButton"
                    android:text="@string/Setting"
                    app:icon="@drawable/settings"
                    android:background="@android:color/transparent"/>
        </LinearLayout>

</LinearLayout>